--- a/pppd/Makefile
+++ b/pppd/Makefile
@@ -1,37 +1,37 @@
 #***********************************************************************
 #
-# Makefile
+# Makefile for PureSTG authentication pppd plugin
 #
-# Makefile for PureSTG authentication plugin
-#
-# Copyright (C) 2010 Alexey Osipov <lion-simba@pridelands.ru>
+# Copyright (C) 2010-2011 Alexey Osipov <lion-simba@pridelands.ru>
 #
 # This program may be distributed according to the terms of the GNU
 # General Public License, version 2 or (at your option) any later version.
 #
 #***********************************************************************
 
-VERSION = $(shell awk -F '"' '/VERSION/ { print $$2; }' /usr/include/pppd/patchlevel.h)
-LIBDIR = /usr/lib/pppd/$(VERSION)/
-# CFLAGS  = -g -O2 -I/usr/include/pppd -L/usr/lib/mysql -DMSLANMAN -fPIC -lmysqlclient
-# For beta pppd version 2.4.2b3
-#CFLAGS  = -g -O2 -I/usr/include/pppd -fPIC -L/usr/lib/mysql -lmysqlclient
-# For pppd version 2.4.2 release
-CFLAGS  = -O2 -I/usr/include/pppd -fPIC -DRELEASE
-#CFLAGS  = -I/usr/include/pppd
-all: purestg2.so
+PPPVERSION = $(shell awk -F '"' '/VERSION/ { print $$2; }' /usr/include/pppd/patchlevel.h)
+LIBDIR = /usr/lib/pppd/$(PPPVERSION)
+PPPINCS=/usr/include/pppd
+STGINCS=/usr/include/stargazer
+CFLAGS  = -O2 -I$(PPPINCS) -I$(STGINCS) -I../include -fPIC -DRELEASE
+PLUGINNAME = purestg2.so
 
-purestg2.o: purestg2.c stg_common.h
-	gcc -c -o purestg2.o $(CFLAGS) purestg2.c
+all: $(PLUGINNAME)
 
-pureclient.o: pureclient.c pureclient.h stg_common.h
-	gcc -c -o pureclient.o $(CFLAGS) pureclient.c
+purestg2.o: purestg2.c
+	$(CC) -c -o purestg2.o $(CFLAGS) purestg2.c
 
-purestg2.so: purestg2.o pureclient.o
-	gcc -o purestg2.so -shared $(CFLAGS) purestg2.o pureclient.o
+pureclient.o: pureclient.c pureclient.h
+	$(CC) -c -o pureclient.o $(CFLAGS) pureclient.c
+
+$(PLUGINNAME): purestg2.o pureclient.o
+	$(CC) -o $(PLUGINNAME) -shared $(CFLAGS) purestg2.o pureclient.o
 
 install: all
-	install -c -m 4550 ./purestg2.so $(LIBDIR)purestg2.so
+	install -c -s -m 644 $(PLUGINNAME) $(LIBDIR)/$(PLUGINNAME)
+
+uninstall:
+	rm -f $(LIBDIR)/$(PLUGINNAME)
 
 clean:
 	rm -f *.o *.so
