Shorten the variable name

--- a/stargazer/Makefile.am
+++ b/stargazer/Makefile.am
@@ -1,4 +1,4 @@
-stargazermodule_LTLIBRARIES = mod_auth_purestg2.la
+stgmodule_LTLIBRARIES = mod_auth_purestg2.la
 
 mod_auth_purestg2_la_SOURCES = purestg2.c purestg2.h ../include/pureproto.h
 mod_auth_purestg2_la_LDFLAGS = -module -avoid-version
