Autotools seems to work now

--- a/configure.ac
+++ b/configure.ac
@@ -3,17 +3,87 @@
 
 AC_PREREQ([2.65])
 AC_INIT([purestg2], [2.0], [lion-simba@pridelands.ru])
+AM_INIT_AUTOMAKE([-Wall -Werror foreign])
+AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([include/pureproto.h])
 AC_CONFIG_HEADERS([config.h])
+
+AH_TEMPLATE([LINUX], Define if you are using Linux)
+AH_TEMPLATE([FREE_BSD], Define if you are using FreeBSD4)
+AH_TEMPLATE([FREE_BSD5], Define if you are using FreeBSD5 or greater)
+
+# Determine the operating system
+AC_MSG_CHECKING([uname -s for detecting host operating system])
+OSNAME=`uname -s`
+OSRELEASE=`uname -r | cut -b1`
+case "$OSNAME" in
+        FreeBSD*)
+                dnl FreeBSD
+                if [ "x$OSRELEASE" = "x4" ]; then
+                	AC_MSG_RESULT(FreeBSD)
+                	AC_DEFINE(FREE_BSD)
+                else
+                	AC_MSG_RESULT(FreeBSD5)
+                	AC_DEFINE(FREE_BSD5)
+                fi
+        ;;
+        Linux*)
+                dnl Linux
+                AC_MSG_RESULT(Linux)
+                AC_DEFINE(LINUX)
+        ;;
+        *)
+                AC_MSG_RESULT(no)
+        ;;
+esac
+
 
 # Checks for programs.
 AC_PROG_CXX
 AC_PROG_CC
+AC_PROG_AWK
+AC_LANG([C++])
+AC_PROG_LIBTOOL
 
-# Checks for libraries.
+# Set pppd and stargazer header directories
+AC_ARG_WITH([pppd-headers],
+    [AC_HELP_STRING([--with-pppd-headers],
+        [where to look for pppd header files, defaults to /usr/include/pppd])],
+    [PPPINCS="$withval"],
+    [PPPINCS="/usr/include/pppd"])
+AC_SUBST([PPPINCS])
+
+AC_ARG_WITH([stg-headers],
+    [AC_HELP_STRING([--with-stg-headers],
+        [where to look for stargazer header files, defaults to /usr/include/stargazer])],
+    [STGINCS="$withval"],
+    [STGINCS="/usr/include/stargazer"])
+AC_SUBST([STGINCS])
 
 # Checks for header files.
 AC_CHECK_HEADERS([netinet/in.h stdlib.h string.h sys/socket.h unistd.h])
+
+AC_CHECK_FILES(
+	[$PPPINCS/pppd.h $STGINCS/stg_common.h $STGINCS/user.h $STGINCS/users.h $STGINCS/stg_logger.h $STGINCS/base_auth.h],
+	[],
+	[
+		AC_MSG_ERROR(header not found)
+	])
+
+# Set pppd and stargazer module directories
+AC_ARG_WITH([pppd-libdir],
+    [AC_HELP_STRING([--with-pppd-libdir],
+        [where to install pppd plugin, defaults to /usr/lib/pppd])],
+    [pppmoduledir=$withval/$(awk -F '"' '/VERSION/ { print $$2; }' $PPPINCS/patchlevel.h)],
+    [pppmoduledir=/usr/lib/pppd/$(awk -F '"' '/VERSION/ { print $$2; }' $PPPINCS/patchlevel.h)])
+AC_SUBST([pppmoduledir])
+
+AC_ARG_WITH([stg-libdir],
+    [AC_HELP_STRING([--with-stg-libdir],
+        [where to install stargazer plugin, defaults to /usr/lib/stg])],
+    [stgmoduledir="$withval"],
+    [stgmoduledir="/usr/lib/stg"])
+AC_SUBST([stgmoduledir])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
