--- a/stargazer/Makefile.in
+++ b/stargazer/Makefile.in
@@ -240,9 +240,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign stargazer/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu stargazer/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign stargazer/Makefile
+	  $(AUTOMAKE) --gnu stargazer/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
