Fixed build out of project directory

--- a/pppd/Makefile.in
+++ b/pppd/Makefile.in
@@ -217,7 +217,7 @@ top_srcdir = @top_srcdir@
 pppmodule_LTLIBRARIES = purestg2.la
 purestg2_la_SOURCES = purestg2.c pureclient.c pureclient.h ../include/pureproto.h
 purestg2_la_LDFLAGS = -module -avoid-version -shared -s
-AM_CPPFLAGS = -I.. -I../include -I$(PPPINCS) -I$(STGINCS)
+AM_CPPFLAGS = -I.. -I$(top_srcdir)/include -I$(PPPINCS) -I$(STGINCS)
 all: all-am
 
 .SUFFIXES:
