--- a/stargazer/Makefile.in
+++ b/stargazer/Makefile.in
@@ -226,7 +226,7 @@ top_srcdir = @top_srcdir@
 stgmodule_LTLIBRARIES = mod_auth_purestg2.la
 mod_auth_purestg2_la_SOURCES = purestg2.cpp purestg2.h ../include/pureproto.h
 mod_auth_purestg2_la_LDFLAGS = -module -avoid-version -shared -s
-AM_CPPFLAGS = -I.. -I../include -I$(STGINCS)
+AM_CPPFLAGS = -I.. -I$(top_srcdir)/include -I$(STGINCS)
 all: all-am
 
 .SUFFIXES:
