--- a/config.h.in
+++ b/config.h.in
@@ -6,6 +6,9 @@
 /* Define if you are using FreeBSD5 or greater */
 #undef FREE_BSD5
 
+/* Define to 1 if you have the <base_auth.h> header file. */
+#undef HAVE_BASE_AUTH_H
+
 /* Define to 1 if you have the <dlfcn.h> header file. */
 #undef HAVE_DLFCN_H
 
@@ -24,6 +27,9 @@
 /* Define to 1 if you have the <netinet/in.h> header file. */
 #undef HAVE_NETINET_IN_H
 
+/* Define to 1 if you have the <pppd.h> header file. */
+#undef HAVE_PPPD_H
+
 /* Define to 1 if you have the `socket' function. */
 #undef HAVE_SOCKET
 
@@ -35,6 +41,12 @@
 
 /* Define to 1 if you have the <stdlib.h> header file. */
 #undef HAVE_STDLIB_H
+
+/* Define to 1 if you have the <stg_common.h> header file. */
+#undef HAVE_STG_COMMON_H
+
+/* Define to 1 if you have the <stg_logger.h> header file. */
+#undef HAVE_STG_LOGGER_H
 
 /* Define to 1 if you have the `strerror' function. */
 #undef HAVE_STRERROR
@@ -59,6 +71,12 @@
 
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
+
+/* Define to 1 if you have the <users.h> header file. */
+#undef HAVE_USERS_H
+
+/* Define to 1 if you have the <user.h> header file. */
+#undef HAVE_USER_H
 
 /* Define to 1 if the system has the type `_Bool'. */
 #undef HAVE__BOOL
