--- a/config.h.in
+++ b/config.h.in
@@ -57,6 +57,9 @@
 /* Define to 1 if you have the <stg/auth.h> header file. */
 #undef HAVE_STG_AUTH_H
 
+/* Define to 1 if you have the <stg/noncopyable.h> header file. */
+#undef HAVE_STG_NONCOPYABLE_H
+
 /* Define to 1 if you have the <stg/stg_const.h> header file. */
 #undef HAVE_STG_STG_CONST_H
 
