--- a/pppd/Makefile.in
+++ b/pppd/Makefile.in
@@ -71,11 +71,12 @@ am__base_list = \
 am__installdirs = "$(DESTDIR)$(pppmoduledir)"
 LTLIBRARIES = $(pppmodule_LTLIBRARIES)
 purestg2_la_LIBADD =
-am_purestg2_la_OBJECTS = purestg2.lo pureclient.lo
+am_purestg2_la_OBJECTS = purestg2_la-purestg2.lo \
+	purestg2_la-pureclient.lo
 purestg2_la_OBJECTS = $(am_purestg2_la_OBJECTS)
 purestg2_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
-	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
-	$(purestg2_la_LDFLAGS) $(LDFLAGS) -o $@
+	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(purestg2_la_CFLAGS) \
+	$(CFLAGS) $(purestg2_la_LDFLAGS) $(LDFLAGS) -o $@
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -220,7 +221,8 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 pppmodule_LTLIBRARIES = purestg2.la
 purestg2_la_SOURCES = purestg2.c pureclient.c pureclient.h ../include/pureproto.h
-purestg2_la_LDFLAGS = -module -avoid-version -shared -s
+purestg2_la_LDFLAGS = -module -avoid-version -shared -s $(PTHREAD_LIBS)
+purestg2_la_CFLAGS = $(PTHREAD_CFLAGS)
 AM_CPPFLAGS = -I.. -I$(top_srcdir)/include -I$(PPPINCS) -I$(STGINCS)
 all: all-am
 
@@ -296,8 +298,8 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pureclient.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/purestg2.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/purestg2_la-pureclient.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/purestg2_la-purestg2.Plo@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
@@ -319,6 +321,20 @@ distclean-compile:
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$<' object='$@' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LTCOMPILE) -c -o $@ $<
+
+purestg2_la-purestg2.lo: purestg2.c
+@am__fastdepCC_TRUE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(purestg2_la_CFLAGS) $(CFLAGS) -MT purestg2_la-purestg2.lo -MD -MP -MF $(DEPDIR)/purestg2_la-purestg2.Tpo -c -o purestg2_la-purestg2.lo `test -f 'purestg2.c' || echo '$(srcdir)/'`purestg2.c
+@am__fastdepCC_TRUE@	$(am__mv) $(DEPDIR)/purestg2_la-purestg2.Tpo $(DEPDIR)/purestg2_la-purestg2.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='purestg2.c' object='purestg2_la-purestg2.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(purestg2_la_CFLAGS) $(CFLAGS) -c -o purestg2_la-purestg2.lo `test -f 'purestg2.c' || echo '$(srcdir)/'`purestg2.c
+
+purestg2_la-pureclient.lo: pureclient.c
+@am__fastdepCC_TRUE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(purestg2_la_CFLAGS) $(CFLAGS) -MT purestg2_la-pureclient.lo -MD -MP -MF $(DEPDIR)/purestg2_la-pureclient.Tpo -c -o purestg2_la-pureclient.lo `test -f 'pureclient.c' || echo '$(srcdir)/'`pureclient.c
+@am__fastdepCC_TRUE@	$(am__mv) $(DEPDIR)/purestg2_la-pureclient.Tpo $(DEPDIR)/purestg2_la-pureclient.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='pureclient.c' object='purestg2_la-pureclient.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(purestg2_la_CFLAGS) $(CFLAGS) -c -o purestg2_la-pureclient.lo `test -f 'pureclient.c' || echo '$(srcdir)/'`pureclient.c
 
 mostlyclean-libtool:
 	-rm -f *.lo
