--- a/pppd/Makefile.in
+++ b/pppd/Makefile.in
@@ -152,7 +152,7 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
-PPPINCS = @PPPINCS@
+PPPFLAGS = @PPPFLAGS@
 PTHREAD_CC = @PTHREAD_CC@
 PTHREAD_CFLAGS = @PTHREAD_CFLAGS@
 PTHREAD_LIBS = @PTHREAD_LIBS@
@@ -160,7 +160,7 @@ RANLIB = @RANLIB@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
-STGINCS = @STGINCS@
+STGFLAGS = @STGFLAGS@
 STRIP = @STRIP@
 VERSION = @VERSION@
 abs_builddir = @abs_builddir@
@@ -223,7 +223,7 @@ pppmodule_LTLIBRARIES = purestg2.la
 purestg2_la_SOURCES = purestg2.c pureclient.c pureclient.h ../include/pureproto.h
 purestg2_la_LDFLAGS = -module -avoid-version -shared -s $(PTHREAD_LIBS)
 purestg2_la_CFLAGS = $(PTHREAD_CFLAGS)
-AM_CPPFLAGS = -I.. -I$(top_srcdir)/include -I$(PPPINCS) -I$(STGINCS)
+AM_CPPFLAGS = -I.. -I$(top_srcdir)/include $(PPPFLAGS) $(STGFLAGS)
 all: all-am
 
 .SUFFIXES:
